# dolphin

./: CMakeLists.txt
Source/Core/Core/: CMakeLists.txt
Source/Core/DolphinQt/: RenderWidget.cpp  RenderWidget.h
Source/Core/VideoBackends/: CMakeLists.txt
Source/Core/VideoBackends/D3D/: D3DUtil.cpp  Render.cpp  Render.h  main.cpp
Source/Core/VideoBackends/Metal/: CMakeLists.txt  CommandBufferManager.cpp  MetalFramebuffer.cpp  MetalPipeline.cpp  MetalTexture.cpp  MetalVertexFormat.cpp  Render.cpp  Render.h  ShaderCompiler.cpp  StateTracker.cpp  StateTracker.h  StreamBuffer.cpp  TextureCache.cpp  TextureCache.h  VertexManager.cpp  VertexManager.h  VideoBackend.cpp  VideoBackend.h  WindowFramebuffer.mm
Source/Core/VideoBackends/Null/: NullBackend.cpp  Render.cpp  Render.h
Source/Core/VideoBackends/OGL/: Render.cpp  Render.h  main.cpp
Source/Core/VideoBackends/Software/: SWRenderer.cpp  SWRenderer.h  SWmain.cpp
Source/Core/VideoBackends/Vulkan/: PostProcessing.cpp  Renderer.cpp  Renderer.h  SwapChain.cpp
Source/Core/VideoCommon/: CMakeLists.txt  GXPipelineTypes.h  PixelShaderGen.cpp  RasterFont.cpp  RenderBase.cpp  RenderBase.h  ShaderCache.cpp  ShaderCache.h  ShaderGenCommon.cpp  TextureConversionShader.cpp  TextureConverterShaderGen.cpp  UberShaderPixel.cpp  UberShaderVertex.cpp  UtilityShaders.h  VertexShaderGen.cpp  VideoBackendBase.cpp  VideoCommon.vcxproj  VideoCommon.vcxproj.filters
